finish page for showing the trips

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./main.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./trips.html">Your Trips</a>
                     </li>
                     <li class = "nav-item dropdown">
                         <a class = "nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -118,24 +121,12 @@
                                         <strong>Facilities:</strong> Restrooms <br>
                                         <strong>Hours:</strong> 8am - 5pm <br>
                                         <strong>Attractions:</strong> Waterfall <br>
-                                        <strong>Rating:</strong> 4.5/5 with 4 ratings<br>
+                                        <strong>Rating:</strong> 4.5/5<br>
                                         <strong>Modified:</strong> 10/10/2021 <br>
                                     </p>
 
-                                    <a href="#collapseExample" class="btn btn-primary" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
-                                        Things to Bring
-                                    </a>
                                     <a href="#" class="btn btn-primary">Add To Trips</a>
-
-                                    <!-- Collapsible content -->
-                                    <div class="collapse mt-3" id="collapseExample">
-                                        <form>
-                                            <div class="input-group">
-                                                <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-                                                <button class="btn btn-outline-success" type="submit">Search</button>
-                                            </div>
-                                        </form>
-                                    </div>
+                                    <a
                                 </div>
                             </div>
                         </div>
