finish login and signup

--- a/trips.html
+++ b/trips.html
@@ -56,8 +56,8 @@
                     </li>
                 </ul>
                 <form class="d-flex" role="Login">
-                    <button class="btn btn-outline-success" type="submit">Login</button>
-                    <button class="btn btn-outline-success" type="submit">SignUp</button>
+                    <a href="./login.html" class="btn btn-outline-success">LogIn</a>
+                    <a class="btn btn-outline-success" href = "./signup.html">SignUp</a>
                     <!-- conditional rendering if user is logged in -->
                     <img src="https://avatars.githubusercontent.com/u/89085111?v=4" alt="User" class="rounded-circle" style="width: 40px; height: 40px;">
                     <button class="btn btn-outline-success" type="submit">Logout</button>
@@ -151,22 +151,22 @@
                                         <p class="mt-3 mx-1">Category:</p>
 
                                         <div class="form-check form-check-inline mx-1">
-                                            <input class="form-check-input" type="radio" name="searchOption" id="cloths" value="cloths">
+                                            <input class="form-check-input" type="radio" name="addOption" id="cloths" value="cloths">
                                             <label class="form-check-label" for="cloths">Cloths</label>
                                         </div>
         
                                         <div class="form-check form-check-inline mx-1">
-                                            <input class="form-check-input" type="radio" name="searchOption" id="drinks" value="drinks">
+                                            <input class="form-check-input" type="radio" name="addOption" id="drinks" value="drinks">
                                             <label class="form-check-label" for="drinks">Drinks</label>
                                         </div>
 
                                         <div class="form-check form-check-inline mx-1">
-                                            <input class="form-check-input" type="radio" name="searchOption" id="food" value="food">
+                                            <input class="form-check-input" type="radio" name="addOption" id="food" value="food">
                                             <label class="form-check-label" for="food">Food</label>
                                         </div>
 
                                         <div class="form-check form-check-inline mx-1">
-                                            <input class="form-check-input" type="radio" name="searchOption" id="tools" value="tools">
+                                            <input class="form-check-input" type="radio" name="addOption" id="tools" value="tools">
                                             <label class="form-check-label" for="tools">Tools</label>
                                         </div>
                                     </form>
